# Historical

./: .gitignore  CMakeLists.txt  CMakePresets.json  build-debug.bat  build-debug.sh  build-release.bat  build-release.sh  readme.md  run-generator.bat  run-generator.sh  run-maintain.bat  run-maintain.sh
.run-generate-email-k0/: generate-email-k0.run.xml
.run-maintain-mail-k0/: maintain-email-k0.run.xml
Historical/experiment/: main.cpp
Historical/experiment/include/entity/: graph.h  graph_with_time_span.h  hop_global_params.h  nonhop_global_params.h  two_hop_label.cpp  two_hop_label.h
Historical/experiment/include/generation/: experiment_generation.h  experiment_generation_hop.h  experiment_generation_nonhop.h
Historical/experiment/include/maintain/: experiment_maintain.h  maintain_decrease_2021_hop.h  maintain_decrease_2021_nonhop.h  maintain_decrease_ruc_hop.h  maintain_decrease_ruc_nonhop.h  maintain_increase_2021_hop.h  maintain_increase_2021_nonhop.h  maintain_increase_ruc_hop.h  maintain_increase_ruc_nonhop.h
Historical/experiment/include/parse/: experiment_argparse.cpp  experiment_argparse.h
Historical/experiment/include/query/: experiment_query.h
Historical/experiment/include/random/: random_weight_generator.h
Historical/experiment/include/utils/: BinaryPersistence.h  CSVWriter.cpp  CSVWriter.h  ExecutionTimer.cpp  ExecutionTimer.h  StringHelper.cpp  StringHelper.h  ThreadPool.h  global.cpp  global.h  sorted_vector_binary_operations.h  vector_operations.h
data/enron-email/raw/: Email-Enron.txt
data/wiki/raw/: Wiki-Vote.txt
experiment/: plot_degree.py
experiment/email-enron/email-x100/: changeinfo_res_2025-07-06-19-50-55.txt
scripts/enron-email/windows/: run-generator.bat
